# nanocast

./: Cargo.toml  LICENCE.md  README.md
engine/: Cargo.toml
engine/src/: actions.rs  config.rs  hotkey.rs  index.rs  lib.rs  models.rs  platform.rs  search.rs  shortcuts.rs
engine/tests/: test_search.rs
src/: main.rs
ui/: Cargo.toml
ui/src/: hotkey.rs  main.rs
