[package]
name = "nanocast"
version = "0.1.0"
edition = "2024"
authors = ["Shvet Saravade"]
description = "Simple and fast pop-up launcher."
readme = "README.md"
repository = "https://github.com/Timebom/nanocast"

[dependencies]

[workspace]
members = ["engine", "ui"]
resolver = "2"

[workspace.dependencies]
serde = { version = "^1.0", features = ["derive"] }
anyhow = "^1.0"
