[package]
name = "nanocast"
version = "0.1.0"
edition = "2024"
authors = ["Shvet Saravade"]
description = "Simple and fast pop-up launcher."
readme = "README.md"
repository = "https://github.com/Timebom/nanocast"

[dependencies]
engine = { path = "engine" }
tokio = { version = "1", features = ["time"] }
iced = { version = "0.14", features = ["wgpu", "tokio", "image", "svg"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[workspace]
members = ["engine"]
resolver = "1"

[workspace.dependencies]
serde = { version = "^1.0", features = ["derive"] }
anyhow = "^1.0"
