[package]
name = "engine"
version = "0.1.0"
edition = "2024"
authors = ["Shvet Saravade"]

[dependencies]
nucleo = "^0.5"
serde = { workspace = true }
anyhow = { workspace = true }
toml = "^1.1.0"
dirs = "^6.0"
walkdir = "2.5.0"
once_cell = "^1.20"
shellexpand = "3.1.2"
open = "5.3.4"
urlencoding = "2.1.3"
